web: Add prepaid card issuer name truncation

--- a/packages/web-client/app/components/card-pay/prepaid-card/index.css
+++ b/packages/web-client/app/components/card-pay/prepaid-card/index.css
@@ -72,6 +72,10 @@
 .prepaid-card__name {
   font: var(--boxel-font-sm);
   font-weight: 700;
+  max-width: 10rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
 }
 
 .prepaid-card__address {
